test/files/neg/plugin-cyclic-dependency/lib/plugins.jar.desired.sha1
d96a5f1b3885225a5e203ae59ae2f2f3e3c65c9b ?plugins.jar
